# 19212_Kolochkin

./: HashTable  HashTable.cpp  HashTable.h  HashTableTest.cpp  HashTableTests.cpp  class Array  class SmartPtr
Befunge Interpreter/: CommandFactory.java  ExecutionContext.java  Interpreter.java  Main.java  MyInputStream.java  MyOutputStream.java  Parser.java  build.gradle  config.properties
Befunge Interpreter/BefungePrograms/: fib.txt
Befunge Interpreter/commands/: ChangerVertexes.java  ChangerVertexesTest.java  Command.java  Comparison.java  ComparisonTest.java  Constant.java  ConstantTest.java  CopierVertex.java  CopierVertexTest.java  Deleter.java  DeleterTest.java  Direction.java  Division.java  (+23 more)
BitTorrentClient/: (Downloaded)test.txt  test.torrent
BlackJack/: BaseStrategy.cpp  BaseStrategy.h  BlackJack.cpp  BlackJack.h  BlackJackTests.cpp  CMakeLists.txt  Factory.h  HardStrategy.cpp  HardStrategy.h  NeatStrategy.cpp  NeatStrategy.h  NotSoStupidStrategy.cpp  NotSoStupidStrategy.h  Printer.cpp  Printer.h  Strategy.h  StupidStrategy.cpp  StupidStrategy.h  TrivialStrategy.cpp  TrivialStrategy.h  main.cpp
BlackJack with dll/: BlackJack.cpp  BlackJack.h  BlackJackTests.cpp  Factory.h  Printer.h  Strategy.h  main.cpp
ClientSeverExmaple/: (Downloaded)test.txt  test.txt
Game of Life/: headers
HashTable/: HashTable.cpp  HashTable.h  HashTableTests.cpp
PacMan/: Controller.java  Entity.java  GameOverWindow.java  Ghost1.java  Ghost2.java  Ghost3.java  Main.java  Model.java  Pacman.java  PauseMenu.java  RecordsTable.java  View.java  pacman.fxml
places/: pom.xml
(+67 files in other folders)
